--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/RZGL/RZGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/RZGL/RZGL.cshtml
@@ -14,17 +14,17 @@
 <form action="" enctype="multipart/form-data" id="form_button_main_photo" method="post">
     <div class="div_photo">
         <div class="divstep" id="divGRLRZ">
-            <span class="spanstep" id="spanGRLRZ">个人类认证</span>
+            <span class="spanstep" id="spanGRLRZ">个人相关认证</span>
             <em class="emstep" id="emGRLRZ"></em>
         </div>
         <div class="divstep" id="divQYLRZ">
-            <span class="spanstep" id="spanQYLRZ">企业类认证</span>
+            <span class="spanstep" id="spanQYLRZ">企业相关认证</span>
             <em class="emstep" id="emQYLRZ"></em>
         </div>
-        <div class="divstep" id="divQTRZ">
+        @*<div class="divstep" id="divQTRZ">
             <span class="spanstep" id="spanQTRZ">其他认证</span>
             <em class="emstep" id="emQTRZ"></em>
-        </div>
+        </div>*@
         <div class="divstep">
             <span class="spanstep">&nbsp;</span>
             <em class="emstep" style="width: 510px;"></em>
@@ -34,11 +34,28 @@
         <div class="div_content">
             <div class="div_content_info">
                 <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_zmsmrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">实名认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;适合有支付宝的用户</li>
+                            @*<li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;无需拍照、实时通过</li>*@
+                        </ul>
+                    </div>
+                </div>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_zmsmrz">去认证</span>
+                </div>
+            </div>
+        </div>
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
                     <span class="img_content_info" id="img_content_info_rlrz"></span>
                     <div class="div_content_info_left_info">
                         <span class="span_content_info_left">人脸认证</span>
                         <ul class="ul_content_info">
-                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;请在明亮地方认证</li>
+                            @*<li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;请在明亮地方认证</li>*@
                             <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;简单便捷、实时通过</li>
                         </ul>
                     </div>
@@ -51,29 +68,12 @@
         <div class="div_content">
             <div class="div_content_info">
                 <div class="div_content_info_left">
-                    <span class="img_content_info" id="img_content_info_zmsmrz"></span>
-                    <div class="div_content_info_left_info">
-                        <span class="span_content_info_left">芝麻实名认证</span>
-                        <ul class="ul_content_info">
-                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;适合有支付宝的用户</li>
-                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;无需拍照、实时通过</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="div_content_info_right">
-                    <span class="span_content_info_right" id="span_content_info_right_zmsmrz">去认证</span>
-                </div>
-            </div>
-        </div>
-        <div class="div_content">
-            <div class="div_content_info">
-                <div class="div_content_info_left">
                     <span class="img_content_info" id="img_content_info_scsfzrz"></span>
                     <div class="div_content_info_left_info">
                         <span class="span_content_info_left">手持身份证认证</span>
                         <ul class="ul_content_info">
                             <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;需清晰的手持身份证照片</li>
-                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;3-5个工作日完成认证</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;5个工作日以内完成认证</li>
                         </ul>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
             </div>
         </div>
     </div>
-    <div id="div_QTRZ" style="display: none">
+    @*<div id="div_QTRZ" style="display: none">
         <div class="div_content">
             <div class="div_content_info">
                 <div class="div_content_info_left">
@@ -188,7 +188,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 </form>
 </body>
 </html>
