--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX.css
@@ -14,7 +14,7 @@
 
 .span_head_nav_info {color: #fff;width: 100px;height: 40px;text-align: center;padding-top: 7px;font-size: 16px;font-weight: 700;display: inline-block;font-family: 微软雅黑;float: left;}
 
-.span_head_nav_info:hover {background: #ad5b97;cursor: pointer}
+.span_head_nav_info:hover {background-color: #ad5b97;cursor: pointer}
 
 .div_body {width: 1000px;height: 630px;margin: 0 auto;text-align: left;}
 
