--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -13,10 +13,10 @@
             <li id="li_head_xzgzh" class="li_head_nav"><span class="span_head_nav">小镇公众号</span><i class="i_head_nav"></i></li>
             <li id="li_head_xcx" class="li_head_nav"><span class="span_head_nav">小程序</span><i class="i_head_nav"></i></li>
             <li id="li_head_xztm" class="li_head_nav"><span class="span_head_nav">小镇特卖</span></li>
-            <li id="li_head_xzjr" class="li_head_nav"><span class="span_head_nav">小镇金融</span></li>
+            <li id="li_head_xzjr" class="li_head_nav"><span class="span_head_nav">小镇装修</span></li>
             <li id="li_head_xzgy" class="li_head_nav"><span class="span_head_nav">小镇公益</span></li>
             <li id="li_head_xzfc" class="li_head_nav"><span class="span_head_nav">小镇房产</span></li>
-            <li id="li_head_xzesc" class="li_head_nav"><span class="span_head_nav">二手车</span></li>
+            <li id="li_head_xzesc" class="li_head_nav"><span class="span_head_nav">小镇卖车</span></li>
             <li id="li_head_xztg" class="li_head_nav"><span class="span_head_nav">小镇推广</span><i class="i_head_nav"></i></li>
             <li id="li_head_viphy" class="li_head_nav"><span class="span_head_nav">VIP会员</span><i class="i_head_nav"></i></li>
         </ul>
@@ -69,7 +69,7 @@
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx3.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx3.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">教育培训</p>
                     </li>
@@ -99,7 +99,7 @@
             </div>
             <div id="div_body_middle_left_SHFW" class="div_body_middle_left_section" style="width: 595px;">
             </div>
-            <div id="div_body_middle_left_SWFW" class="div_body_middle_left_section"style="width: 595px;margin-right: 0;">
+            <div id="div_body_middle_left_SWFW" class="div_body_middle_left_section" style="width: 595px;margin-right: 0;">
             </div>
             <div id="div_body_middle_left_CW" class="div_body_middle_left_section">
             </div>
@@ -121,45 +121,41 @@
             <p class="p_div_foot_right">
                 关于信息小镇
                 <ul class="ul_div_foot_right">
-                    <li class="li_div_foot_right">了解信息小镇</li>
-                    <li class="li_div_foot_right">加入信息小镇</li>
+                    <li class="li_div_foot_right"><a class="a_div_foot_right">了解信息小镇</a></li>
+                    <li class="li_div_foot_right"><a class="a_div_foot_right">加入信息小镇</a></li>
                 </ul>
         </div>
         <div class="div_foot_right">
             <p class="p_div_foot_right">商户推广</p>
             <ul class="ul_div_foot_right">
-                <li class="li_div_foot_right">VIP会员服务</li>
-                <li class="li_div_foot_right">付费推广</li>
-                <li class="li_div_foot_right">宠物专区</li>
-                <li class="li_div_foot_right">全网通</li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">VIP会员服务</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">付费推广</a></li>
+                @*<li class="li_div_foot_right"><a class="a_div_foot_right">宠物专区</a></li>
+                    <li class="li_div_foot_right"><a class="a_div_foot_right">全网通</a></li>*@
             </ul>
         </div>
         <div class="div_foot_right">
-            <p class="p_div_foot_right">合作加盟</p>
+            <p class="p_div_foot_right">关注我们</p>
             <ul class="ul_div_foot_right">
-                <li class="li_div_foot_right">市场与商务合作</li>
-                <li class="li_div_foot_right">网络品牌推广</li>
-                <li class="li_div_foot_right">城市合伙人招募</li>
-                <li class="li_div_foot_right">代理商招募</li>
-                <li class="li_div_foot_right">API合作</li>
-                <li class="li_div_foot_right">大众评审</li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">官方微信</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">新浪微博</a></li>
             </ul>
         </div>
         <div class="div_foot_right">
             <p class="p_div_foot_right">服务支持</p>
             <ul class="ul_div_foot_right">
-                <li class="li_div_foot_right">渠道招商</li>
-                <li class="li_div_foot_right">先行赔付</li>
-                <li class="li_div_foot_right">诚信建设</li>
-                <li class="li_div_foot_right">举报平台</li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">用户协议</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">先行赔付</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">诚信建设</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">举报平台</a></li>
             </ul>
         </div>
         <div class="div_foot_right">
             <p class="p_div_foot_right">帮助中心</p>
             <ul class="ul_div_foot_right">
-                <li class="li_div_foot_right">常见问题</li>
-                <li class="li_div_foot_right">更多帮助</li>
-                <li class="li_div_foot_right">意见反馈</li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=CJWT">常见问题</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=LXKF">联系客服</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=YJFK">意见反馈</a></li>
             </ul>
         </div>
         <p class="p_div_foot_bottom"></p>
