--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
@@ -54,7 +54,8 @@
 .div_foot .div_foot_right .p_div_foot_right{ font-weight: 700;font-size: 16px;height: 45px;}
 .div_foot .div_foot_right .ul_div_foot_right{width: 195px;padding: 0;}
 .div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right{ height: 30px;color: #999999;font-size: 13px;}
-.div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
+.div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right .a_div_foot_right{ height: 30px;color: #999999;font-size: 13px;}
+.div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right .a_div_foot_right:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 
 /*首页_底部*/
 .div_bottom{width: 1200px;overflow-x: hidden;background: #ffffff;height: 100px;display: block;}
