--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -2,8 +2,8 @@
     Layout = "~/Areas/Business/Views/Shared/SY.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/Other/SY.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Other/SY.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/SY/SY.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SY/SY.js")"></script>
 }
 @section Section_Body {
     <div class="div_head_nav">
@@ -25,61 +25,61 @@
         <div class="div_body_top">
             <div class="div_body_top_inner">
                 <ul class="ul_body_top">
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('FCSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_fc2.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">房产</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('CLSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cl4.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">车辆</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('ZPSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zp2.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">招聘</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('CWSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cw2.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">宠物</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('ESSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_es2.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">二手市场</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('SHFWSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_shfw3.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">生活服务</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('SWFW')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_swfw2.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">商务服务</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('JYPXSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx3.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">教育培训</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('ZSJMSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zsjm3.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">招商加盟</p>
                     </li>
-                    <li class="li_body_top">
+                    <li class="li_body_top" onclick="ToEJSY('PFCGSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_pfcg2.png")" />
                         </p>
