--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -61,7 +61,7 @@
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">生活服务</p>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('SWFW')">
+                    <li class="li_body_top" onclick="ToEJSY('SWFWSY')">
                         <p class="p_body_top_left">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_swfw2.png")" />
                         </p>
