--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ESSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ESSY.css
@@ -1,2 +1,20 @@
-﻿body {
-}
+﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
+
+/*首页_主体_上部*/
+.div_body .div_body_top{ width: 1200px;overflow-x: hidden;}
+.div_body .div_body_top .div_body_top_left {width:200px;height:600px;background-color:#ffffff;display:inline-block;float:left;}
+.div_body .div_body_top .div_body_top_left .p_body_top_left{background-color:#59d072;width:100%;height:30px;display:inline-block;color:#ffffff;font-size:18px;font-weight:700;text-align:center;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left {margin:0;height:570px;width:100%;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{width:100%;height:30px;}
+.div_body .div_body_top .div_body_top_right{width:1000px;height:600px;background-color:#ffffff;display:inline-block;float:left;}
+
+/*首页_主体_中部*/
+.div_body .div_body_middle{ width: 1200px;overflow-x: hidden;height: 1650px;}
+
+/*首页_底部*/
+.div_bottom{width: 1200px;overflow-x: hidden;background: #ffffff;height: 100px;display: block;}
+.div_bottom .p_div_bottom { width: 100%;text-align: center;}
+
+::-webkit-input-placeholder { color:#999999; }
+::-moz-placeholder { color:#999999; } /* firefox 19+ */
+:-ms-input-placeholder { color:#999999; } /* ie */
