--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/FCSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/FCSY.css
@@ -1,12 +1,18 @@
-﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
+﻿body {width: 100%;height: 100%;background-color: #eeeff1;}
 
 /*首页_主体_上部*/
-.div_body .div_body_top{ width: 1200px;overflow-x: hidden;}
-.div_body .div_body_top .div_body_top_left {width:200px;height:600px;background-color:#ffffff;display:inline-block;float:left;}
-.div_body .div_body_top .div_body_top_left .p_body_top_left{background-color:#59d072;width:100%;height:30px;display:inline-block;color:#ffffff;font-size:18px;font-weight:700;text-align:center;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left {margin:0;height:570px;width:100%;}
-.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{width:100%;height:30px;}
-.div_body .div_body_top .div_body_top_right{width:1000px;height:600px;background-color:#ffffff;display:inline-block;float:left;}
+.div_body .div_body_top{ width: 1200px;overflow-x: hidden;margin-top:10px;}
+.div_body .div_body_top .div_body_top_left {width:200px;margin-right:10px;height:650px;background-color:#ffffff;display:inline-block;float:left;}
+.div_body .div_body_top .div_body_top_left .p_body_top_left{background-color:#59d072;width:100%;height:40px;display:inline-block;color:#ffffff;font-size:20px;padding-top:3px;font-weight:700;text-align:center;margin-bottom:20px;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left {margin:0;padding:0;height:auto;width:100%;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{width:100%;height:50px;text-align:center;cursor:pointer;padding-top:5px;font-size:16px;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left:hover {text-decoration:underline;color:#59d072}
+.div_body .div_body_top .div_body_top_right{width:990px;height:650px;background-color:#ffffff;display:inline-block;float:left;}
+.div_body .div_body_top .div_body_top_right .p_body_top_right { width:100%;height:30px; display:inline-block;font-size:18px;font-weight:700;text-align:left;padding:5px 20px;margin-top:10px;}
+.div_body .div_body_top .div_body_top_right .ul_body_top_right{padding:0;margin-bottom:0px;padding-left:10px;} 
+.div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right{cursor:pointer;width:140px;height:30px;display:inline-block;float:left;padding:5px 10px;}
+.div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right:hover {text-decoration:underline;color:#59d072}
+
 
 /*首页_主体_中部*/
 .div_body .div_body_middle{ width: 1200px;overflow-x: hidden;height: 1650px;}
