--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
@@ -9,13 +9,96 @@
     <div id="div_Body" class="div_body">
         <div class="div_body_top">
             <div class="div_body_top_left">
-                <p class="p_body_top_left">房产</p>
+                <p class="p_body_top_left">房屋租售</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left"></li>
+                    <li class="li_body_top_left">整套出租</li>
+                    <li class="li_body_top_left">单间出租</li>
+                    <li class="li_body_top_left">日租短租</li>
+                    <li class="li_body_top_left">二手房出售</li>
+                </ul>
+                <p class="p_body_top_left" style="margin-top:10px;">商业地产</p>
+                <ul class="ul_body_top_left">
+                    <li class="li_body_top_left">写字楼租售</li>
+                    <li class="li_body_top_left">商铺租售</li>
+                    <li class="li_body_top_left">厂房租售</li>
+                    <li class="li_body_top_left">仓库租售</li>
+                    <li class="li_body_top_left">土地租售</li>
+                    <li class="li_body_top_left">车位租售</li>
                 </ul>
             </div>
             <div class="div_body_top_right">
-
+                <p class="p_body_top_right">整套出租</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">500元以下</li>
+                    <li class="li_body_top_right">500-1000元</li>
+                    <li class="li_body_top_right">1000-1500元</li>
+                    <li class="li_body_top_right">1500-2000元</li>
+                    <li class="li_body_top_right">2000-3000元</li>
+                    <li class="li_body_top_right">3000-4000元</li>
+                    <li class="li_body_top_right">4000元以上</li>
+                </ul>
+                <p class="p_body_top_right">单间出租</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">500元以下</li>
+                    <li class="li_body_top_right">500-1000元</li>
+                    <li class="li_body_top_right">1000-1500元</li>
+                    <li class="li_body_top_right">1500-2000元</li>
+                    <li class="li_body_top_right">2000-3000元</li>
+                    <li class="li_body_top_right">3000-4000元</li>
+                    <li class="li_body_top_right">4000元以上</li>
+                </ul>
+                <p class="p_body_top_right">日租短租</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">100元以下</li>
+                    <li class="li_body_top_right">100-200元</li>
+                    <li class="li_body_top_right">200-300元</li>
+                    <li class="li_body_top_right">300元以上</li>
+                </ul>
+                <p class="p_body_top_right">二手房出售</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">80万元以下</li>
+                    <li class="li_body_top_right">80-120万元</li>
+                    <li class="li_body_top_right">120-150万元</li>
+                    <li class="li_body_top_right">150-200万元</li>
+                    <li class="li_body_top_right">200-300万元</li>
+                    <li class="li_body_top_right">300-500万元</li>
+                    <li class="li_body_top_right">500-700万元</li>
+                </ul>
+                <p class="p_body_top_right">写字楼租售</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">100平米以下</li>
+                    <li class="li_body_top_right">100-200平米</li>
+                    <li class="li_body_top_right">200-300平米</li>
+                    <li class="li_body_top_right">300-500平米</li>
+                    <li class="li_body_top_right">500-800平米</li>
+                    <li class="li_body_top_right">800-1000平米</li>
+                    <li class="li_body_top_right">1000-2000平米</li>
+                </ul>
+                <p class="p_body_top_right">商铺租售</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">20平米以下</li>
+                    <li class="li_body_top_right">20-50平米</li>
+                    <li class="li_body_top_right">50-100平米</li>
+                    <li class="li_body_top_right">100-200平米</li>
+                    <li class="li_body_top_right">200-500平米</li>
+                    <li class="li_body_top_right">500平米以上</li>
+                </ul>
+                <p class="p_body_top_right">厂房租售</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">1000平米以下</li>
+                    <li class="li_body_top_right">1000-2000平米</li>
+                    <li class="li_body_top_right">2000-5000平米</li>
+                    <li class="li_body_top_right">5000-8000平米</li>
+                    <li class="li_body_top_right">8000-12000平米</li>
+                    <li class="li_body_top_right">12000平米以上</li>
+                </ul>
+                <p class="p_body_top_right">车位租售</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right">15平米以下</li>
+                    <li class="li_body_top_right">15-30平米</li>
+                    <li class="li_body_top_right">30-50平米</li>
+                    <li class="li_body_top_right">50平米以上</li>
+                </ul>
             </div>
         </div>
         <div class="div_body_middle">
