--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
@@ -11,68 +11,68 @@
             <div class="div_body_top_left">
                 <p class="p_body_top_left">房屋租售</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left">整套出租</li>
-                    <li class="li_body_top_left">单间出租</li>
-                    <li class="li_body_top_left">日租短租</li>
-                    <li class="li_body_top_left">二手房出售</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">整套出租</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(14,'/FCCX/FCCX_HZF','null')">单间出租</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'null')">日租短租</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'null')">二手房出售</li>
                 </ul>
                 <p class="p_body_top_left" style="margin-top:10px;">商业地产</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left">写字楼租售</li>
-                    <li class="li_body_top_left">商铺租售</li>
-                    <li class="li_body_top_left">厂房租售</li>
-                    <li class="li_body_top_left">仓库租售</li>
-                    <li class="li_body_top_left">土地租售</li>
-                    <li class="li_body_top_left">车位租售</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'null')">写字楼租售</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(17, '/FCCX/FCCX_SP', 'null')">商铺租售</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'null')">厂房租售</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(20, '/FCCX/FCCX_CK', 'null')">仓库租售</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(21, '/FCCX/FCCX_TD', 'null')">土地租售</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'null')">车位租售</li>
                 </ul>
             </div>
             <div class="div_body_top_right">
                 <p class="p_body_top_right">整套出租</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">500元以下</li>
-                    <li class="li_body_top_right">500-1000元</li>
-                    <li class="li_body_top_right">1000-1500元</li>
-                    <li class="li_body_top_right">1500-2000元</li>
-                    <li class="li_body_top_right">2000-3000元</li>
-                    <li class="li_body_top_right">3000-4000元</li>
-                    <li class="li_body_top_right">4000元以上</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/FCCX/FCCX_ZZF', 'ZJ=151')">500元以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/FCCX/FCCX_ZZF', 'ZJ=152')">500-1000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/FCCX/FCCX_ZZF', 'ZJ=153')">1000-1500元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/FCCX/FCCX_ZZF', 'ZJ=154')">1500-2000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/FCCX/FCCX_ZZF', 'ZJ=155')">2000-3000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/FCCX/FCCX_ZZF', 'ZJ=156')">3000-4000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/FCCX/FCCX_ZZF', 'ZJ=157')">4000元以上</li>
                 </ul>
                 <p class="p_body_top_right">单间出租</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">500元以下</li>
-                    <li class="li_body_top_right">500-1000元</li>
-                    <li class="li_body_top_right">1000-1500元</li>
-                    <li class="li_body_top_right">1500-2000元</li>
-                    <li class="li_body_top_right">2000-3000元</li>
-                    <li class="li_body_top_right">3000-4000元</li>
-                    <li class="li_body_top_right">4000元以上</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=151')">500元以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=152')">500-1000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=153')">1000-1500元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=154')">1500-2000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=155')">2000-3000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=156')">3000-4000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/FCCX/FCCX_HZF', 'ZJ=157')">4000元以上</li>
                 </ul>
                 <p class="p_body_top_right">日租短租</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">100元以下</li>
-                    <li class="li_body_top_right">100-200元</li>
-                    <li class="li_body_top_right">200-300元</li>
-                    <li class="li_body_top_right">300元以上</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=158')">100元以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=159')">100-200元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=160')">200-300元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/FCCX/FCCX_DZF', 'ZJ=161')">300元以上</li>
                 </ul>
                 <p class="p_body_top_right">二手房出售</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">80万元以下</li>
-                    <li class="li_body_top_right">80-120万元</li>
-                    <li class="li_body_top_right">120-150万元</li>
-                    <li class="li_body_top_right">150-200万元</li>
-                    <li class="li_body_top_right">200-300万元</li>
-                    <li class="li_body_top_right">300-500万元</li>
-                    <li class="li_body_top_right">500-700万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'SJ=162')">80万元以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'SJ=163')">80-120万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'SJ=164')">120-150万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'SJ=165')">150-200万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'SJ=166')">200-300万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'SJ=1661')">300-500万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/FCCX/FCCX_ESF', 'SJ=1662')">500-700万元</li>
                 </ul>
                 <p class="p_body_top_right">写字楼租售</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">100平米以下</li>
-                    <li class="li_body_top_right">100-200平米</li>
-                    <li class="li_body_top_right">200-300平米</li>
-                    <li class="li_body_top_right">300-500平米</li>
-                    <li class="li_body_top_right">500-800平米</li>
-                    <li class="li_body_top_right">800-1000平米</li>
-                    <li class="li_body_top_right">1000-2000平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'MJ=180')">100平米以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'MJ=181')">100-200平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'MJ=182')">200-300平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'MJ=183')">300-500平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'MJ=184')">500-800平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'MJ=185')">800-1000平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/FCCX/FCCX_XZL', 'MJ=186')">1000-2000平米</li>
                 </ul>
                 <p class="p_body_top_right">商铺租售</p>
                 <ul class="ul_body_top_right">
