--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
@@ -76,33 +76,45 @@
                 </ul>
                 <p class="p_body_top_right">商铺租售</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">20平米以下</li>
-                    <li class="li_body_top_right">20-50平米</li>
-                    <li class="li_body_top_right">50-100平米</li>
-                    <li class="li_body_top_right">100-200平米</li>
-                    <li class="li_body_top_right">200-500平米</li>
-                    <li class="li_body_top_right">500平米以上</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(17, '/FCCX/FCCX_SP', 'MJ=176')">20平米以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(17, '/FCCX/FCCX_SP', 'MJ=177')">20-50平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(17, '/FCCX/FCCX_SP', 'MJ=178')">50-100平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(17, '/FCCX/FCCX_SP', 'MJ=179')">100-200平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(17, '/FCCX/FCCX_SP', 'MJ=1791')">200-500平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(17, '/FCCX/FCCX_SP', 'MJ=1792')">500平米以上</li>
                 </ul>
                 <p class="p_body_top_right">厂房租售</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">1000平米以下</li>
-                    <li class="li_body_top_right">1000-2000平米</li>
-                    <li class="li_body_top_right">2000-5000平米</li>
-                    <li class="li_body_top_right">5000-8000平米</li>
-                    <li class="li_body_top_right">8000-12000平米</li>
-                    <li class="li_body_top_right">12000平米以上</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=220')">1000平米以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=221')">1000-2000平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=222')">2000-5000平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=223')">5000-8000平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=224')">8000-12000平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=225')">12000平米以上</li>
                 </ul>
                 <p class="p_body_top_right">车位租售</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right">15平米以下</li>
-                    <li class="li_body_top_right">15-30平米</li>
-                    <li class="li_body_top_right">30-50平米</li>
-                    <li class="li_body_top_right">50平米以上</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=245')">15平米以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=246')">15-30平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=247')">30-50平米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=248')">50平米以上</li>
                 </ul>
             </div>
         </div>
-        <div class="div_body_middle">
-
+        <div id="div_body_middle" class="div_body_middle">
+            @*<div class="div_body_middle_item">
+                <div class="div_body_middle_item_left">
+                    <p class="p_body_middle_item_left">整套出租</p>
+                    <ul class="ul_body_middle_item_left">
+                        <li class="li_body_middle_item_left">鼓楼</li>
+                        <li class="li_body_middle_item_left">台江</li>
+                        <li class="li_body_middle_item_left">仓山</li>
+                        <li class="li_body_middle_item_left">马尾</li>
+                        <li class="li_body_middle_item_left">长乐</li>
+                    </ul>
+                </div>
+                <div class="div_body_middle_item_right"></div>
+            </div>*@
         </div>
     </div>
     <div class="div_bottom">
