--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/FCSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/FCSY.css
@@ -15,7 +15,7 @@
 
 
 /*首页_主体_中部*/
-.div_body .div_body_middle{ width: 1200px;overflow-x: hidden;height: auto;}
+.div_body .div_body_middle{ width: 1200px;overflow-x: hidden;height: auto;margin-bottom:10px;}
 .div_body .div_body_middle .div_body_middle_item{width:100%;height:450px;margin-top:10px;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left{width:200px;height:450px;background-color:#ffffff;display:inline-block;float:left;margin-right:10px;}
 .div_body .div_body_middle .div_body_middle_item .div_body_middle_item_left .p_body_middle_item_left{width:100%;height:40px;display:inline-block;color:#000000;font-size:18px;font-weight:700;padding-top:5px;text-align:center;margin-bottom:20px;border-bottom:1px solid #cccccc;}
@@ -33,7 +33,7 @@
 
 
 /*首页_底部*/
-.div_bottom{width: 1200px;overflow-x: hidden;background: #ffffff;height: 100px;display: block;}
+.div_bottom{width: 1200px;overflow-x: hidden;background: #ffffff;height: 100px;display: block;padding-top:10px;}
 .div_bottom .p_div_bottom { width: 100%;text-align: center;}
 
 ::-webkit-input-placeholder { color:#999999; }
