--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CLSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CLSY.cshtml
@@ -9,17 +9,103 @@
     <div id="div_Body" class="div_body">
         <div class="div_body_top">
             <div class="div_body_top_left">
-                <p class="p_body_top_left">车辆</p>
+                <p class="p_body_top_left">车辆买卖</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left"></li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(185, '/CLCX/CLCX_JC', 'null')">轿车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(186, '/CLCX/CLCX_DDC','null')">电动车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(187, '/CLCX/CLCX_MTC', 'null')">摩托车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(188, '/CLCX/CLCX_ZXC', 'null')">自行车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(190, '/CLCX/CLCX_HC', 'null')">货车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(192, '/CLCX/CLCX_KC', 'null')">客车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(191, '/CLCX/CLCX_GCC', 'null')">工程车</li>
+                </ul>
+                <p class="p_body_top_left" style="margin-top:10px;">车辆服务</p>
+                <ul class="ul_body_top_left">
+                    <li class="li_body_top_left" onclick="OpenCXLB(197, '/CLCX/CLCX_QCWXBY', 'null')">维修保养</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(198, '/CLCX/CLCX_GHSPNJYC', 'null')">过户验车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(199, '/CLCX/CLCX_QCMRZS', 'null')">美容装饰</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(200, '/CLCX/CLCX_QCGZFH', 'null')">改装防护</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(196, '/CLCX/CLCX_QCPL', 'null')">汽车陪练</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(194, '/CLCX/CLCX_DJ', 'null')">汽车代驾</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(2001, '/CLCX/CLCX_QCPJ', 'null')">汽车配件</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(193, '/CLCX/CLCX_ZC', 'null')">汽车租赁</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(195, '/CLCX/CLCX_JX', 'null')">驾校培训</li>
                 </ul>
             </div>
             <div class="div_body_top_right">
-
+                <p class="p_body_top_right">轿车</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/CLCX/CLCX_JC', 'JG=746')">4万元以内</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/CLCX/CLCX_JC', 'JG=747')">4-6万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/CLCX/CLCX_JC', 'JG=748')">6-8万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/CLCX/CLCX_JC', 'JG=749')">8-10万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/CLCX/CLCX_JC', 'JG=750')">10-15万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/CLCX/CLCX_JC', 'JG=751')">15-20万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(13, '/CLCX/CLCX_JC', 'JG=752')">20-25万元</li>
+                </ul>
+                <p class="p_body_top_right">电动车</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/CLCX/CLCX_DDC', 'JG=778')">300元以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/CLCX/CLCX_DDC', 'JG=779')">300-500元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/CLCX/CLCX_DDC', 'JG=780')">500-1000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/CLCX/CLCX_DDC', 'JG=781')">1000-2000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/CLCX/CLCX_DDC', 'JG=782')">2000-3000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/CLCX/CLCX_DDC', 'JG=783')">3000-5000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(14, '/CLCX/CLCX_DDC', 'JG=784')">5000元以上</li>
+                </ul>
+                <p class="p_body_top_right">摩托车</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/CLCX/CLCX_MTC', 'JG=770')">1000元以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/CLCX/CLCX_MTC', 'JG=771')">1000-2000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/CLCX/CLCX_MTC', 'JG=772')">2000-3000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/CLCX/CLCX_MTC', 'JG=773')">3000-4000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/CLCX/CLCX_MTC', 'JG=774')">4000-6000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/CLCX/CLCX_MTC', 'JG=775')">6000-8000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(15, '/CLCX/CLCX_MTC', 'JG=776')">8000-10000元</li>
+                </ul>
+                <p class="p_body_top_right">自行车</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/CLCX/CLCX_ZXC', 'JG=778')">300元以下</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/CLCX/CLCX_ZXC', 'JG=779')">300-500元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/CLCX/CLCX_ZXC', 'JG=780')">500-1000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/CLCX/CLCX_ZXC', 'JG=781')">1000-2000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/CLCX/CLCX_ZXC', 'JG=782')">2000-3000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/CLCX/CLCX_ZXC', 'JG=783')">3000-5000元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(16, '/CLCX/CLCX_ZXC', 'JG=784')">5000元以上</li>
+                </ul>
+                <p class="p_body_top_right">货车</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_HC', 'JG=754')">1万元以内</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_HC', 'JG=755')">1-2万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_HC', 'JG=756')">2-3元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_HC', 'JG=757')">3-5万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_HC', 'JG=758')">5-8万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_HC', 'JG=759')">8-12万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_HC', 'JG=760')">12-18万元</li>
+                </ul>
+                <p class="p_body_top_right">客车</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_KC', 'JG=754')">1万元以内</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_KC', 'JG=755')">1-2万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_KC', 'JG=756')">2-3元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_KC', 'JG=757')">3-5万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_KC', 'JG=758')">5-8万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_KC', 'JG=759')">8-12万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_KC', 'JG=760')">12-18万元</li>
+                </ul>
+                <p class="p_body_top_right">工程车</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_GCC', 'JG=754')">1万元以内</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_GCC', 'JG=755')">1-2万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_GCC', 'JG=756')">2-3元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_GCC', 'JG=757')">3-5万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_GCC', 'JG=758')">5-8万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_GCC', 'JG=759')">8-12万元</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(18, '/CLCX/CLCX_GCC', 'JG=760')">12-18万元</li>
+                </ul>
             </div>
         </div>
-        <div class="div_body_middle">
-
+        <div id="div_body_middle" class="div_body_middle">
         </div>
     </div>
     <div class="div_bottom">
